@@ -8,7 +8,7 @@ import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-public class MRCM {
+public record MRCM(List<Domain> domains, List<AttributeDomain> attributeDomains, List<AttributeRange> attributeRanges) {
 
 	// Hardcoded Is a (attribute)
 	// 'Is a' is not really an attribute at all but it's convenient for implementations to have this.
@@ -16,33 +16,12 @@ public class MRCM {
 			new Cardinality(1, null), new Cardinality(0, 0), RuleStrength.MANDATORY, ContentType.ALL);
 	public static final AttributeRange IS_A_ATTRIBUTE_RANGE = new AttributeRange(null, null, true, Concepts.ISA, "*", "*", RuleStrength.MANDATORY, ContentType.ALL);
 
-	private final List<Domain> domains;
-	private final List<AttributeDomain> attributeDomains;
-	private final List<AttributeRange> attributeRanges;
-
-	public MRCM(List<Domain> domains, List<AttributeDomain> attributeDomains, List<AttributeRange> attributeRanges) {
-		this.domains = domains;
-		this.attributeDomains = attributeDomains;
-		this.attributeRanges = attributeRanges;
-	}
-
-	public List<Domain> getDomains() {
-		return domains;
-	}
-
-	public List<AttributeDomain> getAttributeDomains() {
-		return attributeDomains;
-	}
-
-	public List<AttributeRange> getAttributeRanges() {
-		return attributeRanges;
-	}
 
 	public List<AttributeDomain> getAttributeDomainsForContentType(ContentType contentType) {
 		List<AttributeDomain> attributeDomains = new ArrayList<>();
 		attributeDomains.add(IS_A_ATTRIBUTE_DOMAIN);
-		attributeDomains.addAll(getAttributeDomains().stream()
-				.filter(attributeDomain -> attributeDomain.getContentType().ruleAppliesToContentType(contentType)).collect(Collectors.toList()));
+		attributeDomains.addAll(attributeDomains().stream()
+				.filter(attributeDomain -> attributeDomain.getContentType().ruleAppliesToContentType(contentType)).toList());
 		return attributeDomains;
 	}
 
@@ -51,7 +30,7 @@ public class MRCM {
 		if (Concepts.ISA.equals(attributeId)) {
 			attributeRanges = Collections.singleton(IS_A_ATTRIBUTE_RANGE);
 		} else {
-			attributeRanges = getAttributeRanges().stream()
+			attributeRanges = attributeRanges().stream()
 					.filter(attributeRange -> attributeRange.getContentType().ruleAppliesToContentType(contentType)
 							&& attributeRange.getRuleStrength() == RuleStrength.MANDATORY
 							&& attributeRange.getReferencedComponentId().equals(attributeId)).collect(Collectors.toSet());
